<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login.Vue.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"

        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/mify" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="34dp"
        app:cardCornerRadius="25dp"
        android:outlineSpotShadowColor="#000000"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="358dp"
            android:background="#525357">

            <EditText
                android:id="@+id/UserName"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="82dp"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="81dp"
                android:layout_marginRight="81dp"
                android:autofillHints=""
                android:background="#525357"
                android:clickable="true"
                android:drawableStart="@drawable/ic_action_name"
                android:drawableLeft="@drawable/ic_action_name"
                android:ems="10"
                android:filterTouchesWhenObscured="false"
                android:focusableInTouchMode="true"
                android:forceDarkAllowed="true"
                android:hint="@string/email_or_phone_number"
                android:inputType="textEmailAddress"
                android:screenReaderFocusable="false"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textColor="#000000"
                android:textColorHint="#F6F6F6"
                android:textSize="16sp"
                android:focusable="true" />

            <EditText
                android:id="@+id/Password"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/UserName"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="94dp"
                android:layout_marginLeft="94dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="95dp"
                android:layout_marginRight="95dp"
                android:background="#525357"

                android:drawableStart="@drawable/ic_action_lock"
                android:drawableLeft="@drawable/ic_action_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layerType="none"
                android:textColor="#FEFEFE"
                android:textColorHint="#F6F6F6"
                android:typeface="normal"
                android:autofillHints="" />

            <Button
                android:id="@+id/login"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="118dp"
                android:layout_marginLeft="118dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="111dp"
                android:layout_marginRight="111dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_rounded"
                android:text="@string/login"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="164dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="118dp"

                android:layout_marginLeft="118dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="111dp"
                android:layout_marginRight="111dp"
                android:layout_marginBottom="34dp"
                android:background="#525357"

                android:gravity="center_horizontal"
                android:text="@string/register_here"
                android:textColor="#F6F6F6"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/passwordForget"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_below="@+id/Password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:layout_marginStart="105dp"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="92dp"
                android:layout_marginRight="92dp"

                android:background="#525357"
                android:gravity="center_horizontal"
                android:text="Forget your password ?"
                android:textColor="#A5A3A3"
                android:textColorHint="#FFFFFF"
                android:textSize="10sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>